--- a/animals/src/AnimalShow.css
+++ b/animals/src/AnimalShow.css
@@ -4,12 +4,11 @@
     padding: 10px;
     border-radius: 5px;
     margin: 10px;
-    box-shadow: 0px 3px 4px lightgray;
+    box-shadow: 0 3px 4px lightgray;
 }
 
 .animal {
     height: 200px;
-
 }
 
 .heart {
